# bastile

./: .gitignore  CONTEXT.md  GPT_OSS_BENCHMARKS.md  LICENSE  Makefile  README.md  modal_run.py  pyproject.toml  test_minimal_kernel.py
.github/workflows/: ci.yml  publish.yml
src/bastile/: __init__.py  autotune.py  core.py  registry.py
src/bastile/ops/: __init__.py  configs.py  cross_entropy.py  fused_linear_cross_entropy.py  gpt_oss_moe.py  lce_forward.py  moe_experts.py  moe_gate.py  moe_router.py  rms_norm.py  rms_norm_cutile.py  rope.py  swiglu.py  utils.py
tests/benchmarks/: __init__.py  benchmark_e2e.py  benchmark_gpt_oss.py  benchmark_qwen3.py  run_all.py  utils.py
tests/benchmarks/e2e/: __init__.py  comparison.py  comparison_small.py  gpt_oss.py  gpt_oss_20b_seqlen.py  profile_gpt_oss.py  profile_kernels.py  profile_router.py  quick_bench.py  qwen3.py  qwen_06b_direct.py  qwen_06b_seqlen.py  qwen_7b_seqlen.py  qwen_8b_fsdp.py  qwen_8b_seqlen.py
tests/benchmarks/kernel/: __init__.py  bench_fused_lce.py  bench_rmsnorm_tma.py  cross_entropy.py  geglu.py  moe_experts.py  moe_gate.py  profile_moe_bwd.py  profile_moe_gemm.py  rms_norm.py  rms_norm_compare.py  rms_norm_quack_vs_cutile.py  rope.py  swiglu.py  test_dw_approaches.py
tests/experiments/: bench_bwd_chunked.py  bench_bwd_tile_m.py  ncu_bwd_chunked.py  profile_autograd_overhead.py  test_dw_reduce.py
tests/ops/: __init__.py  run_all.py  test_cross_entropy.py  test_fused_linear_cross_entropy.py  test_geglu.py  test_moe_experts.py  test_moe_gate.py  test_moe_router.py  test_rms_norm.py  test_rms_norm_cutile.py  test_rope.py  test_swiglu.py
