[project]
name = "bastile"
version = "0.1.0"
description = "Monkey-patch PyTorch with optimized CuTile kernels for training (forward + backward)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Aghilan", email = "aghilan@example.com" }
]
keywords = ["pytorch", "cuda", "cutile", "optimization", "training", "finetuning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "nvidia-cutlass>=4.2.0.0",
    "nvidia-cutlass-dsl>=4.3.5",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bastile"]

[tool.hatch.build.targets.sdist]
include = ["src/bastile"]

[tool.uv]
# Use PyTorch nightly with CUDA 12.8 for CuTile support
extra-index-url = ["https://download.pytorch.org/whl/nightly/cu128"]
