[project]
name = "bastile"
version = "0.1.0"
description = "Monkey-patch PyTorch with optimized CuTile kernels for training (forward + backward)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    { name = "Aghilan", email = "aghilan@example.com" }
]
keywords = ["pytorch", "cuda", "cutile", "optimization", "training", "finetuning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "liger-kernel>=0.5.0",
]
bench = [
    "matplotlib>=3.8.0",
    "liger-kernel>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/aghilann/bastile"
Repository = "https://github.com/aghilann/bastile"
Issues = "https://github.com/aghilann/bastile/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bastile"]

[tool.hatch.build.targets.sdist]
include = ["src/bastile"]

[tool.hatch.version]
path = "src/bastile/__init__.py"

[tool.uv]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
